feat: Implement async static and time-aware RAG simulation models, a static zero-shot model, and simulation data generation.

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ datasets/chroma_db_backup_*/
 models/
 
 .vscode/
+
+# Ignore CSV results in team folders
+static_rag/*.csv
+static_zero_shot/*.csv
+time_aware_rag/*.csv
